# RosMasterX3

./: mock_devices.py  package.xml  robot_control.html  rosmaster_driver.py  rosmaster_driver_ros2.py  setup.py  websocket_control.py
ZhejiangUniversity/: 基于K8S的远程操控环境搭建实体机配置.docx
ZhejiangUniversity/catkin_ws/src/driver_node_ros1/: CMakeLists.txt  package.xml
ZhejiangUniversity/catkin_ws/src/driver_node_ros1/launch/: driver_node.launch
ZhejiangUniversity/catkin_ws/src/driver_node_ros2/: CMakeLists.txt  Dockerfile  driver-deployment.yaml  package.xml  setup.py
ZhejiangUniversity/catkin_ws/src/driver_node_ros2/config/: deviceshifu_config.yaml  deviceshifu_params.yaml
ZhejiangUniversity/catkin_ws/src/driver_node_ros2/driver_node_ros2/: __init__.py  driver_node.py
ZhejiangUniversity/catkin_ws/src/driver_node_ros2/driver_node_ros2/nodes/: __init__.py  driver_node.py
ZhejiangUniversity/catkin_ws/src/driver_node_ros2/launch/: deviceshifu_driver.launch.py
ZhejiangUniversity/catkin_ws/src/driver_node_ros2/scripts/: driver_node
ZhejiangUniversity/catkin_ws/src/driver_node_ros2/src/driver_node_ros2/: __init__.py
ZhejiangUniversity/catkin_ws/src/driver_node_ros2/test/: test_driver_node.py
ZhejiangUniversity/dockerfile/: Dockerfile  Dockerfile.ros2  deployment.yaml  deviceshifu.yaml  entrypoint.sh  http_server.py  params.yaml
ZhejiangUniversity/k8s/: build.sh  configmap.yaml  deploy.sh  deployment-ros1.yaml  deployment-ros2.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  network-policy.yaml  secret.yaml  service-ros1.yaml  service-ros2.yaml  service.yaml
ZhejiangUniversity/ros转mqtt配置文件/: params.yaml  params_master-192.168.31.101.yaml
ZhejiangUniversity/yaml文件/: local_mosquitto_device_arm.yaml  local_ros-mqtt.yaml
launch/: rosmaster_driver.launch.py
rosmaster_driver_ros2/: rosmaster_driver_ros2.py
rosmaster_interfaces/msg/: Encoder.msg
src/: mock_devices.py  rosmaster_driver_ros1.py  test_interface.py
src/rosmaster/launch/: sensors.launch.py
src/rosmaster_driver_ros2/: README.md  package.xml  setup.py
src/rosmaster_driver_ros2/launch/: test_driver.launch.py
src/rosmaster_driver_ros2/rosmaster_driver_ros2/: __init__.py  mock_devices.py  rosmaster_driver_ros2.py  run_driver.py  test_interface.py  test_node.py
src/rosmaster_driver_ros2/rosmaster_driver_ros2/test/: __init__.py  test_driver.py
src/rosmaster_interfaces/: CMakeLists.txt  package.xml
src/rosmaster_interfaces/msg/: Encoder.msg  RobotState.msg
src/rosmaster_interfaces/srv/: SetPIDParam.srv
src/test/: package.xml  setup.py
src/test/launch/: move_test.launch.py
src/test/test/: depth_processor.py  laser_processor.py  move_test.py
